<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qiweili.healthapp.pages.MainActivity">

    <ImageView
        android:id="@+id/backgound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginscreen_bg"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@color/textBackground"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/HelloworldText"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_above="@+id/LoginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="Welcome to use Health App"
        android:textColor="#f5f5f5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="280dp"
        android:background="@color/btnColor"
        android:text="Login"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
